--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "ios/Vendor/SDWebImage"]
 	path = ios/Vendor/SDWebImage
 	url = https://github.com/rs/SDWebImage.git
+    branch = 5.0.0-beta6
